new proj/src/objects/GE_PW_Attendees__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PWNU_AppReq__c</fullName>
        <label>Approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PWNU_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PWNU_Level__c</fullName>
        <label>Level</label>
        <picklist>
            <controllingField>GE_PWNU_Role__c</controllingField>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2 - Staff Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3 - P&amp;L Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4 - Mission Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 5 - PLL / PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3 Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4 Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PWNU_RMeeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>R Meeting</label>
        <referenceTo>R_Meeting__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PWNU_Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>CEO / Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial / Contracts / Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Functions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Attendees</label>
    <nameField>
        <label>Attendees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>